lib/bindings/open_dspc_bindings_generated.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
import 'dart:ffi' as ffi;

@ffi.Native<yl_fft_plan_handle Function(ffi.Int)>()
external yl_fft_plan_handle yl_fft_plan_r2c_create(int n);

@ffi.Native<yl_fft_plan_handle Function(ffi.Int)>()
external yl_fft_plan_handle yl_fft_plan_c2r_create(int n);

@ffi.Native<yl_fft_plan_handle Function(ffi.Int)>()
external yl_fft_plan_handle yl_fft_plan_c2c_create(int n);

@ffi.Native<ffi.Void Function(yl_fft_plan_handle)>()
external void yl_fft_plan_destroy(yl_fft_plan_handle plan);

@ffi.Native<ffi.Uint32 Function(yl_fft_plan_handle)>()
external int yl_fft_plan_length(yl_fft_plan_handle plan);

/// RFFT: out_real/out_imag length = n/2 + 1
@ffi.Native<
  ffi.Void Function(
    yl_fft_plan_handle,
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Float>,
  )
>()
external void yl_fft_plan_execute_r2c(
  yl_fft_plan_handle plan,
  ffi.Pointer<ffi.Float> input,
  ffi.Pointer<ffi.Float> out_real,
  ffi.Pointer<ffi.Float> out_imag,
);

/// IRFFT: in_real/in_imag length = n/2 + 1, output length = n
@ffi.Native<
  ffi.Void Function(
    yl_fft_plan_handle,
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Float>,
  )
>()
external void yl_fft_plan_execute_c2r(
  yl_fft_plan_handle plan,
  ffi.Pointer<ffi.Float> in_real,
  ffi.Pointer<ffi.Float> in_imag,
  ffi.Pointer<ffi.Float> output,
);

@ffi.Native<
  ffi.Void Function(
    yl_fft_plan_handle,
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Float>,
  )
>()
external void yl_fft_plan_execute_c2c_forward(
  yl_fft_plan_handle plan,
  ffi.Pointer<ffi.Float> in_real,
  ffi.Pointer<ffi.Float> in_imag,
  ffi.Pointer<ffi.Float> out_real,
  ffi.Pointer<ffi.Float> out_imag,
);

@ffi.Native<
  ffi.Void Function(
    yl_fft_plan_handle,
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Float>,
  )
>()
external void yl_fft_plan_execute_c2c_backward(
  yl_fft_plan_handle plan,
  ffi.Pointer<ffi.Float> in_real,
  ffi.Pointer<ffi.Float> in_imag,
  ffi.Pointer<ffi.Float> out_real,
  ffi.Pointer<ffi.Float> out_imag,
);

/// RFFT->abs/pow/db: out_bins length = n/2 + 1
@ffi.Native<
  ffi.Void Function(
    yl_fft_plan_handle,
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Float>,
    ffi.UnsignedInt,
    ffi.Float,
  )
>()
external void yl_fft_plan_execute_r2c_spec(
  yl_fft_plan_handle plan,
  ffi.Pointer<ffi.Float> input,
  ffi.Pointer<ffi.Float> out_bins,
  int mode,
  double db_floor,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Void>,
    ffi.Pointer<ffi.Float>,
    ffi.Int,
    ffi.Pointer<ffi.Float>,
    ffi.Int,
    ffi.UnsignedInt,
  )
>()
external void yl_fft_autocorr(
  ffi.Pointer<ffi.Void> plan_handle,
  ffi.Pointer<ffi.Float> input,
  int input_len,
  ffi.Pointer<ffi.Float> out_acf,
  int out_len,
  int mode,
);

@ffi.Native<ffi.Uint32 Function(ffi.Uint32)>()
external int yl_rfft_bins(int n);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Float>,
    ffi.Int,
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Float>,
  )
>()
external void yl_fft_forward(
  ffi.Pointer<ffi.Float> input,
  int length,
  ffi.Pointer<ffi.Float> out_real,
  ffi.Pointer<ffi.Float> out_imag,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Float>,
    ffi.Int,
    ffi.Pointer<ffi.Float>,
  )
>()
external void yl_fft_inverse(
  ffi.Pointer<ffi.Float> in_real,
  ffi.Pointer<ffi.Float> in_imag,
  int length,
  ffi.Pointer<ffi.Float> output,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Float>,
    ffi.Int,
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Float>,
  )
>()
external void yl_fft_complex_forward(
  ffi.Pointer<ffi.Float> in_real,
  ffi.Pointer<ffi.Float> in_imag,
  int length,
  ffi.Pointer<ffi.Float> out_real,
  ffi.Pointer<ffi.Float> out_imag,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Float>,
    ffi.Int,
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Float>,
  )
>()
external void yl_fft_complex_inverse(
  ffi.Pointer<ffi.Float> in_real,
  ffi.Pointer<ffi.Float> in_imag,
  int length,
  ffi.Pointer<ffi.Float> out_real,
  ffi.Pointer<ffi.Float> out_imag,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Float>,
    ffi.Int,
    ffi.Pointer<ffi.Float>,
    ffi.UnsignedInt,
    ffi.Float,
  )
>()
external void yl_fft_spec(
  ffi.Pointer<ffi.Float> input,
  int length,
  ffi.Pointer<ffi.Float> out_bins,
  int mode,
  double db_floor,
);

@ffi.Native<ffi.Pointer<ffi.Void> Function(ffi.Int)>()
external ffi.Pointer<ffi.Void> yl_lpc_ctx_create(int m);

@ffi.Native<ffi.Int Function(ffi.Pointer<ffi.Void>)>()
external int yl_lpc_ctx_order(ffi.Pointer<ffi.Void> ctx);

@ffi.Native<
  ffi.Float Function(
    ffi.Pointer<ffi.Void>,
    ffi.Pointer<ffi.Float>,
    ffi.Int,
    ffi.Int,
    ffi.Int,
    ffi.Pointer<ffi.Float>,
  )
>()
external double yl_lpc_ctx_process_frame(
  ffi.Pointer<ffi.Void> ctx,
  ffi.Pointer<ffi.Float> y,
  int L,
  int method,
  int sptk,
  ffi.Pointer<ffi.Float> out,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>)>()
external void yl_lpc_ctx_destroy(ffi.Pointer<ffi.Void> ctx);

@ffi.Native<
  ffi.Float Function(
    ffi.Pointer<ffi.Float>,
    ffi.Int,
    ffi.Int,
    ffi.Int,
    ffi.Int,
    ffi.Pointer<ffi.Float>,
  )
>()
external double yl_lpc_process_single(
  ffi.Pointer<ffi.Float> y,
  int L,
  int m,
  int method,
  int sptk,
  ffi.Pointer<ffi.Float> out,
);

@ffi.Native<
  ffi.Float Function(
    yl_fft_plan_handle,
    ffi.Pointer<ffi.Float>,
    ffi.Int,
    ffi.Pointer<ffi.Float>,
    ffi.UnsignedInt,
    ffi.Float,
    ffi.Float,
    ffi.Float,
  )
>()
external double yl_pitch_acf_frame(
  yl_fft_plan_handle plan_handle,
  ffi.Pointer<ffi.Float> input,
  int input_len,
  ffi.Pointer<ffi.Float> out_acf,
  int mode,
  double sample_rate,
  double fmin,
  double fmax,
);

@ffi.Native<
  ffi.Pointer<ffi.Void> Function(
    ffi.Pointer<ffi.Float>,
    ffi.Int,
    ffi.Pointer<ffi.Float>,
    ffi.Int,
  )
>()
external ffi.Pointer<ffi.Void> yl_iir_ctx_create_df2t_f32(
  ffi.Pointer<ffi.Float> b,
  int nb,
  ffi.Pointer<ffi.Float> a,
  int na,
);

@ffi.Native<
  ffi.Int Function(
    ffi.Pointer<ffi.Void>,
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Float>,
    ffi.Int,
  )
>()
external int yl_iir_ctx_process_f32(
  ffi.Pointer<ffi.Void> ctx,
  ffi.Pointer<ffi.Float> x,
  ffi.Pointer<ffi.Float> y,
  int nx,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>)>()
external void yl_iir_ctx_destroy(ffi.Pointer<ffi.Void> ctx);

@ffi.Native<ffi.Pointer<ffi.Void> Function(ffi.Int, ffi.Int)>()
external ffi.Pointer<ffi.Void> yl_polyfit_ctx_create_f64(int deg, int nmax);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>)>()
external void yl_polyfit_ctx_destroy_f64(ffi.Pointer<ffi.Void> ctx);

@ffi.Native<
  ffi.Int Function(
    ffi.Pointer<ffi.Void>,
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Double>,
    ffi.Int,
    ffi.UnsignedInt,
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Double>,
  )
>()
external int yl_polyfit_ctx_fit_f64(
  ffi.Pointer<ffi.Void> ctx,
  ffi.Pointer<ffi.Double> x,
  ffi.Pointer<ffi.Double> y,
  int n,
  int mode,
  ffi.Pointer<ffi.Double> a_out,
  ffi.Pointer<ffi.Double> rmse_out,
);

@ffi.Native<
  ffi.Int Function(
    ffi.Pointer<ffi.Void>,
    ffi.Pointer<ffi.Double>,
    ffi.Int,
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Double>,
  )
>()
external int yl_polyfit_ctx_eval_scaled_f64(
  ffi.Pointer<ffi.Void> ctx,
  ffi.Pointer<ffi.Double> x,
  int n,
  ffi.Pointer<ffi.Double> a_scaled,
  ffi.Pointer<ffi.Double> y_out,
);

@ffi.Native<
  ffi.Int Function(
    ffi.Pointer<ffi.Void>,
    ffi.Pointer<ffi.Double>,
    ffi.Int,
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Double>,
  )
>()
external int yl_polyfit_ctx_eval_xdomain_f64(
  ffi.Pointer<ffi.Void> ctx,
  ffi.Pointer<ffi.Double> x,
  int n,
  ffi.Pointer<ffi.Double> a_x,
  ffi.Pointer<ffi.Double> y_out,
);

@ffi.Native<
  ffi.Pointer<ffi.Void> Function(
    ffi.Int,
    ffi.Int,
    ffi.Int,
    ffi.Float,
    ffi.UnsignedInt,
    ffi.Float,
  )
>()
external ffi.Pointer<ffi.Void> yl_resample_ctx_create(
  int orig_freq,
  int new_freq,
  int lowpass_filter_width,
  double rolloff,
  int method,
  double beta,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>)>()
external void yl_resample_ctx_destroy(ffi.Pointer<ffi.Void> r);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>)>()
external void yl_resample_reset_ffi(ffi.Pointer<ffi.Void> r);

@ffi.Native<ffi.Int Function(ffi.Int, ffi.Int, ffi.Int)>()
external int yl_resample_out_len_ffi(int orig_freq, int new_freq, int in_len);

@ffi.Native<
  ffi.Int Function(
    ffi.Pointer<ffi.Void>,
    ffi.Pointer<ffi.Float>,
    ffi.Int,
    ffi.Pointer<ffi.Float>,
  )
>()
external int yl_resample_ctx_process(
  ffi.Pointer<ffi.Void> r,
  ffi.Pointer<ffi.Float> in$,
  int in_len,
  ffi.Pointer<ffi.Float> out,
);

@ffi.Native<
  ffi.Pointer<ffi.Void> Function(
    ffi.Int,
    ffi.Int,
    ffi.Int,
    ffi.Float,
    ffi.Float,
    ffi.UnsignedInt,
    ffi.UnsignedInt,
  )
>()
external ffi.Pointer<ffi.Void> yl_mel_ctx_create(
  int sr,
  int n_fft,
  int n_mels,
  double fmin,
  double fmax,
  int scale,
  int norm,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>)>()
external void yl_mel_ctx_destroy(ffi.Pointer<ffi.Void> m);

/// Apply filterbank to one frame of power bins (size n_bins = n_fft/2+1).
@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Void>,
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Float>,
  )
>()
external void yl_mel_ctx_apply(
  ffi.Pointer<ffi.Void> m,
  ffi.Pointer<ffi.Float> power_bins,
  ffi.Pointer<ffi.Float> mel_out,
);

@ffi.Native<yl_stft_handle Function(ffi.Pointer<yl_stft_cfg>)>()
external yl_stft_handle yl_stft_create(ffi.Pointer<yl_stft_cfg> cfg);

@ffi.Native<ffi.Void Function(yl_stft_handle)>()
external void yl_stft_reset(yl_stft_handle s);

@ffi.Native<ffi.Void Function(yl_stft_handle)>()
external void yl_stft_destroy(yl_stft_handle s);

@ffi.Native<ffi.Uint32 Function(yl_stft_handle)>()
external int yl_stft_bins(yl_stft_handle s);

@ffi.Native<ffi.Uint32 Function(yl_stft_handle)>()
external int yl_stft_nfft(yl_stft_handle s);

@ffi.Native<ffi.Uint32 Function(yl_stft_handle)>()
external int yl_stft_hop(yl_stft_handle s);

@ffi.Native<ffi.Uint32 Function(yl_stft_handle)>()
external int yl_stft_win_len(yl_stft_handle s);

@ffi.Native<
  ffi.Size Function(
    yl_stft_handle,
    ffi.Pointer<ffi.Float>,
    ffi.Size,
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Float>,
    ffi.Size,
  )
>()
external int yl_stft_push_r2c(
  yl_stft_handle s,
  ffi.Pointer<ffi.Float> input,
  int input_len,
  ffi.Pointer<ffi.Float> out_re,
  ffi.Pointer<ffi.Float> out_im,
  int out_frames_cap,
);

@ffi.Native<
  ffi.Size Function(
    yl_stft_handle,
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Float>,
    ffi.Size,
  )
>()
external int yl_stft_flush_r2c(
  yl_stft_handle s,
  ffi.Pointer<ffi.Float> out_re,
  ffi.Pointer<ffi.Float> out_im,
  int out_frames_cap,
);

@ffi.Native<
  ffi.Size Function(
    yl_stft_handle,
    ffi.Pointer<ffi.Float>,
    ffi.Size,
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Float>,
    ffi.Size,
  )
>()
external int yl_stft_process_r2c(
  yl_stft_handle s,
  ffi.Pointer<ffi.Float> signal,
  int signal_len,
  ffi.Pointer<ffi.Float> out_re,
  ffi.Pointer<ffi.Float> out_im,
  int out_frames_cap,
);

@ffi.Native<
  ffi.Size Function(
    yl_stft_handle,
    ffi.Pointer<ffi.Float>,
    ffi.Size,
    ffi.Pointer<ffi.Float>,
    ffi.Size,
    ffi.UnsignedInt,
    ffi.Float,
  )
>()
external int yl_stft_push_spec(
  yl_stft_handle s,
  ffi.Pointer<ffi.Float> input,
  int input_len,
  ffi.Pointer<ffi.Float> out_bins,
  int out_frames_cap,
  int mode,
  double db_floor,
);

@ffi.Native<
  ffi.Size Function(
    yl_stft_handle,
    ffi.Pointer<ffi.Float>,
    ffi.Size,
    ffi.UnsignedInt,
    ffi.Float,
  )
>()
external int yl_stft_flush_spec(
  yl_stft_handle s,
  ffi.Pointer<ffi.Float> out_bins,
  int out_frames_cap,
  int mode,
  double db_floor,
);

@ffi.Native<
  ffi.Size Function(
    yl_stft_handle,
    ffi.Pointer<ffi.Float>,
    ffi.Size,
    ffi.Pointer<ffi.Float>,
    ffi.Size,
    ffi.UnsignedInt,
    ffi.Float,
  )
>()
external int yl_stft_process_spec(
  yl_stft_handle s,
  ffi.Pointer<ffi.Float> signal,
  int signal_len,
  ffi.Pointer<ffi.Float> out_bins,
  int out_frames_cap,
  int mode,
  double db_floor,
);

@ffi.Native<ffi.Uint32 Function(ffi.Uint32, ffi.Uint32)>()
external int yl_conv_out_len_ffi(int nx, int nh);

@ffi.Native<ffi.Uint32 Function(ffi.Uint32, ffi.Uint32, ffi.UnsignedInt)>()
external int yl_conv_out_len_mode_ffi(int nx, int nh, int out_mode);

@ffi.Native<
  ffi.Int Function(
    ffi.Pointer<ffi.Float>,
    ffi.Int,
    ffi.Pointer<ffi.Float>,
    ffi.Int,
    ffi.Pointer<ffi.Float>,
    ffi.UnsignedInt,
  )
>()
external int yl_conv_direct_f32_ffi(
  ffi.Pointer<ffi.Float> x,
  int nx,
  ffi.Pointer<ffi.Float> h,
  int nh,
  ffi.Pointer<ffi.Float> y,
  int mode,
);

@ffi.Native<
  ffi.Int Function(
    ffi.Pointer<ffi.Float>,
    ffi.Int,
    ffi.Pointer<ffi.Float>,
    ffi.Int,
    ffi.Pointer<ffi.Float>,
    ffi.UnsignedInt,
    ffi.UnsignedInt,
  )
>()
external int yl_conv_direct_mode_f32_ffi(
  ffi.Pointer<ffi.Float> x,
  int nx,
  ffi.Pointer<ffi.Float> h,
  int nh,
  ffi.Pointer<ffi.Float> y,
  int mode,
  int out_mode,
);

@ffi.Native<
  ffi.Int Function(
    ffi.Pointer<ffi.Float>,
    ffi.Int,
    ffi.Pointer<ffi.Float>,
    ffi.Int,
    ffi.Pointer<ffi.Float>,
    ffi.UnsignedInt,
    ffi.UnsignedInt,
  )
>()
external int yl_conv_direct_mode_simd_f32_ffi(
  ffi.Pointer<ffi.Float> x,
  int nx,
  ffi.Pointer<ffi.Float> h,
  int nh,
  ffi.Pointer<ffi.Float> y,
  int mode,
  int out_mode,
);

@ffi.Native<ffi.Uint32 Function(ffi.Uint32, ffi.UnsignedInt)>()
external int yl_autocorr_out_len_ffi(int n, int mode);

@ffi.Native<
  ffi.Int Function(
    ffi.Pointer<ffi.Float>,
    ffi.Int,
    ffi.Pointer<ffi.Float>,
    ffi.UnsignedInt,
  )
>()
external int yl_autocorr_direct_ffi(
  ffi.Pointer<ffi.Float> x,
  int n,
  ffi.Pointer<ffi.Float> y,
  int mode,
);

@ffi.Native<
  ffi.Int Function(
    ffi.Pointer<ffi.Float>,
    ffi.Int,
    ffi.Pointer<ffi.Float>,
    ffi.UnsignedInt,
  )
>()
external int yl_autocorr_direct_simd_ffi(
  ffi.Pointer<ffi.Float> x,
  int n,
  ffi.Pointer<ffi.Float> y,
  int mode,
);

@ffi.Native<ffi.Pointer<ffi.Void> Function(ffi.Int, ffi.Int)>()
external ffi.Pointer<ffi.Void> yl_fftconv_ctx_create_f32(
  int nx_max,
  int nh_max,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>)>()
external void yl_fftconv_ctx_destroy(ffi.Pointer<ffi.Void> ctx);

@ffi.Native<ffi.Uint32 Function(ffi.Pointer<ffi.Void>)>()
external int yl_fftconv_ctx_nfft(ffi.Pointer<ffi.Void> ctx);

@ffi.Native<ffi.Uint32 Function(ffi.Pointer<ffi.Void>)>()
external int yl_fftconv_ctx_bins(ffi.Pointer<ffi.Void> ctx);

@ffi.Native<ffi.Uint32 Function(ffi.Pointer<ffi.Void>)>()
external int yl_fftconv_ctx_x_max(ffi.Pointer<ffi.Void> ctx);

@ffi.Native<ffi.Uint32 Function(ffi.Pointer<ffi.Void>)>()
external int yl_fftconv_ctx_h_max(ffi.Pointer<ffi.Void> ctx);

@ffi.Native<
  ffi.Int Function(
    ffi.Pointer<ffi.Void>,
    ffi.Pointer<ffi.Float>,
    ffi.Int,
    ffi.Pointer<ffi.Float>,
    ffi.Int,
    ffi.Pointer<ffi.Float>,
    ffi.UnsignedInt,
  )
>()
external int yl_fftconv_ctx_process_f32(
  ffi.Pointer<ffi.Void> ctx,
  ffi.Pointer<ffi.Float> x,
  int nx,
  ffi.Pointer<ffi.Float> h,
  int nh,
  ffi.Pointer<ffi.Float> y,
  int mode,
);

typedef yl_fft_plan_handle = ffi.Pointer<ffi.Void>;

enum yl_window_type {
  YL_WIN_HANN(1),
  YL_WIN_HAMMING(2),
  YL_WIN_BLACKMAN(3);

  final int value;
  const yl_window_type(this.value);

  static yl_window_type fromValue(int value) => switch (value) {
    1 => YL_WIN_HANN,
    2 => YL_WIN_HAMMING,
    3 => YL_WIN_BLACKMAN,
    _ => throw ArgumentError('Unknown value for yl_window_type: $value'),
  };
}

final class yl_stft_cfg extends ffi.Struct {
  @ffi.Uint32()
  external int n_fft;

  @ffi.Uint32()
  external int win_len;

  @ffi.Uint32()
  external int hop;

  @ffi.UnsignedInt()
  external int winAsInt;

  yl_window_type get win => yl_window_type.fromValue(winAsInt);

  @ffi.Int()
  external int mean_subtract;

  @ffi.Int()
  external int center;
}

typedef yl_stft_handle = ffi.Pointer<ffi.Void>;
